# apolo-cad

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.es.md  README.md  pytest.ini  restart-apolo.bat  start-apolo.ps1
.claude/: launch.json
core/: MUJOCO_LOG.TXT  pyproject.toml
core/apolo/: __init__.py  batch.py  mcp_server.py  projects.py  sandbox.py  state.py
core/apolo/agent/: __init__.py  agent.py  prompts.py  script_wrapper.py
core/apolo/api/: errorlog.py  jobs.py  main.py
core/apolo/assembly/: __init__.py  autodetect.py  connectivity.py  constraints.py  dof.py  grouping.py  groups.py  mates.py
core/apolo/commands/: __init__.py  expressions.py  models.py  registry.py
core/apolo/design/: __init__.py  guidelines.py
core/apolo/doc/: __init__.py  document.py  geomcache.py  subproject.py
core/apolo/drawing/: __init__.py  assembly_manual.py  autodim.py  calc_report.py  dimensions.py  dwg.py  dxf.py  explode.py  pdf.py  process.py  projection.py  quote.py  sheet.py  sheetset.py  svg.py  titleblock.py
core/apolo/fea/: __init__.py  assembly.py  fringe.py  mesher.py  solver.py  static.py
core/apolo/kernel/: __init__.py  direct.py  io.py  matrix.py  measure.py  mesh.py  pick.py  render.py  render_vtk.py  selectors.py  shapes.py  sketch_gcs.py  sketch_geom.py  sketch_scipy.py  sketch_solver.py  surface.py  sweep.py  topology.py
core/apolo/physics/: __init__.py  anim.py  hull.py  sim.py  stability.py
core/apolo/robotics/: __init__.py  anim.py  arm.py  model.py  motion.py  pose.py  sdf.py  urdf.py
core/tests/: test_mejoras_mcp.py
docs/: devlog.md  (+2 more)
(+252 files in other folders)
